--- a/penguin2.html
+++ b/penguin2.html
@@ -250,7 +250,7 @@
   </style>
   </head>
   <body>
-    <h1>Hola Pipe</h1>
+    <h1>Hola Amigo</h1>
     <div class="penguin">
       <div class="penguin-bottom">
         <div class="right-hand"></div>
