--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,11 +5,45 @@
   <meta charset="utf-8">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <title>David's Portfolio</title>
 </head>
 
 <body>
+<div class="container">
+
+
+  <header id="head" class="row">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#navbar">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" target="_blank" href="https://github.com/dacorreav">Github</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  href="#footer">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" target="_blank" href="https://github.com/dacorreav/certifications">Certifications</a>
+        </li>
+
+      </ul>
+<div class="cosmetic"> </div>
+    </div>
+
+  </nav>
+
+  </header>
+
+  </div>
 
   <main id="main-content" class="main-content">
     <div id="heading" class="container-fluid">
@@ -30,29 +64,76 @@
 
     <section id="projects" class="projects">
 
-      <div class="project-tile">
-        <div class="card">
-          <img class="card-img-top" src="" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <div class="card-deck">
+
+        <div class="project-tile card card1">
+          <a href="bb.dracohobby.com"><img class="card-img-top img-fluid" src="https://images2.imgbox.com/b4/73/HlhJ0wMh_o.jpg" alt="bloodbowl"></a>
+            <div class="card-body">
+            <h5 class="card-title">Med Hammer Bloodbowl Hub</h5>
+            <p class="card-text">An installation of OBBLM, a fantasy football boardgame done for <a href="www.medhammer.com">Med Hammer.</a> It runs on PHP and MySQL and required some fine tuning since it's pretty outdated. We managed to force it to run in PHP 7.1!</p>
+
           </div>
         </div>
-        <div class="project-tile">
-          <img class="card-img-top" src="" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+         <div class="w-100 d-none  d-sm-block d-md-block d-lg-none">  </div>
+        <div class="card project-tile card2 ">
+          <a href="dracohobby.com"><img class="card-img-top img-fluid" src="https://images2.imgbox.com/1e/8a/Ufqeu3Uo_o.jpg" alt="Card image cap"></a>
+            <div class="card-body">
+            <h5 class="card-title">Draco Hobby Center</h5>
+            <p class="card-text">This eCommerce site runs on Wordpress with some premium theme from envato. The clunkiness of the theme forced us to try and develop a custom theme. WIP!</p>
+
           </div>
         </div>
-        <div class="project-tile">
-          <img class="card-img-top" src="" alt="Card image cap">
+
+
+
+ <div class="w-100 d-none d-lg-block d-xl-none">  </div>
+  <div class="w-100 d-none  d-sm-block d-md-block d-lg-none">  </div>
+          <div class="card project-tile card3">
+            <a href="github.com/dacorreav/freeCodeCamp/"><img id="jsimg" class="card-img-top img-fluid canvas" src="https://images2.imgbox.com/ed/41/MIyORiLj_o.png" alt="Card image cap"></a>
+              <div class="card-body">
+              <h5 class="card-title">Coding JavaScript</h5>
+              <p class="card-text">Here you can find a direct link to my code tinkering, and the solutions as I advance through some books and challenges. Right now I'm reading Eloquent Javascript by Marijn Haverbeke and running freeCodeCamp.</p>
+
+            </div>
+          </div>
+
+
+ <div class="w-100 d-none d-lg-none d-xl-block">  </div>
+  <div class="w-100 d-none  d-sm-block d-md-block d-lg-none">  </div>
+        <div class="card project-tile card4">
+          <a href="dracohobby.com"><img class="card-img-top img-fluid" src="https://images2.imgbox.com/d7/b0/XbrEJa5K_o.jpg" alt="Card image cap">
+          <div class="card-body"></a>
+                      <h5 class="card-title">Draco Landing</h5>
+            <p class="card-text">This landing page is a hacky answer to a client need for two separate Wordpress installations for localized shopping. The geometric pattern is done by me in svg.</p>
+
+          </div>
+        </div>
+
+
+
+ <div class="w-100 d-none d-md-none d-lg-block d-xl-none">  </div>
+  <div class="w-100 d-none  d-sm-block d-md-block d-lg-none">  </div>
+        <div class="card project-tile card5">
+          <a href="https://codepen.io/dacorreav/details/zYvLLZy">  <img class="card-img-top img-fluid" src="https://images2.imgbox.com/6b/cd/VIpXmNEo_o.jpg" alt="Card image cap"></a>
+
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Survey Page</h5>
+            <p class="card-text">freeCodeCamp demo exercise, and a first look into some interesting CSS.</p>
+
+          </div>
+        </div>
+
+ <div class="w-100 d-none  d-sm-block d-md-block d-lg-none">  </div>
+        <div class="card project-tile card6">
+
+
+          <a href="https://codepen.io/dacorreav/pen/JjYmKPZ"><img class="card-img-top img-fluid" src="https://images2.imgbox.com/0e/e1/DjSy0254_o.jpg" alt="Card image cap"></a>
+
+          <div class="card-body">
+            <h5 class="card-title">Technical Documentation Page</h5>
+            <p class="card-text">Another exercise that puts to the test boostrap and responsiveness.</p>
+
           </div>
         </div>
       </div>
@@ -62,13 +143,42 @@
   </div>
 </div>
 
+    <section class="links container-fluid">
+      <div class="row">
+      <div class="container">
+        <div class="row">
+          <h3 id="more" class="col-lg-12 text-center">Want to know more?</h3>
+
+          <a target="_blank" href="https://github.com/dacorreav/certifications" class="col-lg-4 col-md-6 col-sm-12"><button type="button" name="button" value="My Certifications" class="btn btn-block btn-info">My Certifications</button></a>
+          <a target="_blank" href="https://www.freecodecamp.org/dacorreav" class="col-lg-4 col-md-6 col-sm-12" id="profile-link"><button type="button" name="button" value="My freeCodeCamp" class="btn btn-block btn-info">My freeCodeCamp</button></a>
+          <a target="_blank" href="https://github.com/dacorreav/" class="col-lg-4 col-md-12 col-sm-12"><button type="button" name="button" value="My Git Repos" class="btn btn-block btn-info">My Git Repos</button></a>
+
+        </div>
+
+<div id="footer">
+
+  <h3 id="more2"class="text-center">Find me!</h3>
+
+
+  <a href="mailto:david.correav@gmail.com" class="col-md-12"><button type="button" name="button" value="Mailme" class="btn btn-block btn-success">Send me an Email</button></a>
+</div>
+
+      </div>
+
+      </div>
+
+      <p class="text-center" id="copyright">All rights reserved. &copy; 2020</p>
+
+    </section>
+
+
+
   </main>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
